@@ -30,7 +30,7 @@ public class RefImportSelection extends CommonRefIdentifier implements IImportSe
 	public void performRefSearch(CommonDefUnitSearch search) {
 		RefModule refMod = getImportSelectiveContainer().getModuleRef();
 		Collection<INamedElement> targetModules = refMod.findTargetDefElements(search.getModuleResolver(), false);
-		CommonRefQualified.resolveSearchInMultipleElements(targetModules, search);
+		Reference.resolveSearchInMultipleContainers(targetModules, search, false);
 	}
 	
 }
