@@ -23,18 +23,19 @@ int other;
 	Foo #REFSEARCH¤【!invalid_qualified】#FINDFAIL.Var;
 	Foo #REFSEARCH¤【!invalid_qualified】.Var;
 	
-	Foo.#REFSEARCH¤【Var▪Var2▪member▪intro】#FINDMISSING;
-	Foo.#REFSEARCH¤【Var▪Var2▪member▪intro】#FINDMISSING  ;
-	Foo. #REFSEARCH¤【Var▪Var2▪member▪intro】#FINDMISSING;
-	Foo. #REFSEARCH¤【Var▪Var2▪member▪intro】#FINDMISSING  ;
+	Foo.#REFSEARCH¤【Var▪Var2▪member▪intro▪#@TYPE_PROPERTIES】#FINDMISSING;
+	Foo.#REFSEARCH¤【Var▪Var2▪member▪intro▪#@TYPE_PROPERTIES】#FINDMISSING  ;
+	Foo. #REFSEARCH¤【Var▪Var2▪member▪intro▪#@TYPE_PROPERTIES】#FINDMISSING;
+	Foo. #REFSEARCH¤【Var▪Var2▪member▪intro▪#@TYPE_PROPERTIES】#FINDMISSING  ;
 	
-	// Test keywords as qualified identifier
-	Foo. #FINDMISSING#REFSEARCH¤【Var▪Var2▪member▪intro►2】in;
-	Foo. i#FINDFAIL#REFSEARCH¤【intro►1】n;
-	Foo. in#FINDFAIL#REFSEARCH¤【intro】;
+	// Test keywords as qualified identifier - in keyword
+	Foo. #FINDMISSING#REFSEARCH¤【Var▪Var2▪member▪intro▪#@TYPE_PROPERTIES►2】in;
+	Foo. i#FINDFAIL#REFSEARCH¤【intro▪init►1】n;
+	Foo. in#FINDFAIL#REFSEARCH¤【intro▪init】;
 	
-	Foo. #FINDMISSING#REFSEARCH¤【Var▪Var2▪member▪intro►3】int;
-	Foo. i#FIND¤【/int】#REFSEARCH¤【intro►2】nt;
+	// Test keywords as qualified identifier - int keyword
+	Foo. #FINDMISSING#REFSEARCH¤【Var▪Var2▪member▪intro▪#@TYPE_PROPERTIES►3】int;
+	Foo. i#FIND¤【/int】#REFSEARCH¤【intro▪init►2】nt;
 	Foo. int#FIND¤【/int】#REFSEARCH¤【intro】;	
 	
 #@__CONTEXT_END__
@@ -57,13 +58,13 @@ invariant() {
 	. #REFSEARCH¤【Var▪Var2▪member▪intro】#FINDMISSING;
 	. #REFSEARCH¤【Var▪Var2▪member▪intro】#FINDMISSING  ;
 	
-	// Test keywords as qualified identifier
+	// Test keywords as qualified identifier - in keyword
 	. #FINDMISSING#REFSEARCH¤【Var▪Var2▪member▪intro►2】in;
 	. i#FINDFAIL#REFSEARCH¤【intro►1】n;
 	. in#FINDFAIL#REFSEARCH¤【intro】;
 	
+	// Test keywords as qualified identifier - int keyword
 	. #FINDMISSING#REFSEARCH¤【Var▪Var2▪member▪intro►3】int;
 	. i#FIND¤【/int】#REFSEARCH¤【intro►2】nt;
 	. int#FIND¤【/int】#REFSEARCH¤【intro】;	
-	
 }
