@@ -1,0 +1,13 @@
+Ⓗ▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂
+
+#@INTEGRAL_TYPES《byte●ubyte●short●ushort●int●uint●long●ulong●char●wchar●dchar》
+#@FLOAT_TYPES《float●double●real》
+
+▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂
+void.#REFSEARCH¤【#@TYPE_PROPERTIES】;
+▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂
+bool.#REFSEARCH¤【#@TYPE_PROPERTIES】;
+▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂ TODO
+#@INTEGRAL_TYPES.#REFSEARCH¤【#@TYPE_PROPERTIES】;
+▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂▂ TODO
+#@FLOAT_TYPES.#REFSEARCH¤【#@TYPE_PROPERTIES】;
