@@ -68,58 +68,4 @@ public class CodeCompletion_LookupTest extends CodeCompletion__Common {
 		);
 	}
 	
-	@Test
-	public void test6() throws Exception {
-		// FIXUP because of syntax errors;
-		srcModule.getBuffer().replace(getMarkerEndOffset("/+CC6@+/")+3, 1, ".");
-		try {
-			testComputeProposals(getMarkerEndOffset("/+CC6@+/")+4, 0, 
-					"foovar", "foox", "baz");
-		} finally {
-			srcModule.getBuffer().replace(541, 1, " ");
-		}
-	}
-	@Test
-	public void test6b() throws Exception {
-		// Test in middle of the first name of the qualified ref
-		int offset = getMarkerEndOffset("/+CC6b@+/");
-		testComputeProposalsWithRepLen(offset+1, 1, 2, 
-				"Foo", "FooBar");
-		// Test at end of qualified ref
-		testComputeProposals(offset+5, 1, 
-				"foovar", "foox");
-	}
-	
-	@Test
-	public void test7() throws Exception {
-		// TODO: don't modify files, use a more side effect free approach
-		int markerEndOffset = getMarkerEndOffset("/+CC7@+/");
-		srcModule.getBuffer().replace(markerEndOffset, 1, ".");
-		try {
-			testComputeProposals(markerEndOffset+1, 0, 
-					"Foo", "fooOfModule", "frak",
-					"fooalias", "foo_t", "ix", "FooBar", "Xpto", "func(char b, List!(Foo) b)", "func()",
-					"pack", "nonexistantmodule",
-					"othervar", "Other");
-		} finally {
-			srcModule.getBuffer().replace(markerEndOffset, 1, " ");
-		}
-	}
-	
-	
-	@Test
-	public void test7b() throws Exception {
-		testComputeProposals(getMarkerEndOffset("/+CC7b@+/")+2, 1, 
-				"fooOfModule", "frak",
-				"func(char b, List!(Foo) b)", "func()",
-				"fooalias", "foo_t");
-	}
-	
-	
-	@Test
-	public void test8() throws Exception {
-		testComputeProposals(getMarkerEndOffset("/+CC8@+/")+14, 1, 
-				"foovar", "foox");
-	}
-	
 }
